added beginning shell to project.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head><link rel="stylesheet" href="resources/css/style.css">
     <meta charset="utf-8">
     <title>Excursion</title>
   </head>
   <body>
-
+    <!-- "Main Section" -->
+    <h1> Discover hidden places in the world around you</h1>
+    <!-- Download Excursion (coming soon!) a class -->
+      <p> </p>
+   <!-- Video add auto play loop -->
+   <!-- First supporting section -->
+   <h2>Your personal travel guide</h2>
+   <p>"Excursion remembers places you like, and recommends new points of interest around you."</p>
   </body>
 </html>
