--- a/index.html
+++ b/index.html
@@ -7,11 +7,31 @@
   <body>
     <!-- "Main Section" -->
     <h1> Discover hidden places in the world around you</h1>
-    <!-- Download Excursion (coming soon!) a class -->
-      <p> </p>
+      <p>
+        <a class="cta" href="#">Download Excursion (Coming soon!)</a>
+      </p>
    <!-- Video add auto play loop -->
+<video autoplay muted loop>
+   <source src="resources/videos/excursion.mp4" type="video/mp4">
+   </video>
    <!-- First supporting section -->
    <h2>Your personal travel guide</h2>
    <p>"Excursion remembers places you like, and recommends new points of interest around you."</p>
+   <!-- New paragraph add img src "Camp"-->
+
+   <!-- "Second supporting section"-->
+
+   <!-- New paragraph and img class "app" src phone image"-->
+
+   <h2> Coming Soon for iPhone and Android</h2>
+   <!-- New paragraph a class "cta" href Download Excurion (Coming Soon)-->
+
+   <!--"Footer"-->
+   <div class="footer">
+     <p>© Excursion</p>
+   </div>
+
+
+
   </body>
 </html>
