Updated CSS and html to project

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head><link rel="stylesheet" href="resources/css/style.css">
+  <head><<link href="./css/style.css" type="text/css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Excursion</title>
   </head>
@@ -18,14 +18,18 @@
    <h2>Your personal travel guide</h2>
    <p>"Excursion remembers places you like, and recommends new points of interest around you."</p>
    <!-- New paragraph add img src "Camp"-->
-
+   <p>
+     <img src="resources/images/camp.jpg" alt>
+   </p>
    <!-- "Second supporting section"-->
-
-   <!-- New paragraph and img class "app" src phone image"-->
-
+   <p>
+     <img src="resources/images/phone.png">
+   </p>
    <h2> Coming Soon for iPhone and Android</h2>
    <!-- New paragraph a class "cta" href Download Excurion (Coming Soon)-->
-
+   <p>
+     <a class="cta" href="#">Download Excursion (Coming soon!)</a>
+   </p>
    <!--"Footer"-->
    <div class="footer">
      <p>© Excursion</p>
